fix overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ html{
   font-size: 16px;
 } 
 
+html body {
+  overflow-x: hidden;
+}
+
 .section-title {
   margin-top: 1em;
   font-size: 1.75em;
